--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 <h1> Hello!</h1>
-<p>Content coming soon(ish)</p>
+<h3>Content coming soon(ish).</h3>
+<p>...perhaps.</p>
 </body>
 </html>
