--- a/index.html
+++ b/index.html
@@ -7,8 +7,31 @@
     <meta name="keywords" content="" />
 </head>
 <body>
-<h1> Hello!</h1>
-<h3>Content coming soon(ish).</h3>
-<p>...perhaps.</p>
+<div class="wrapper">
+	<div class="section">
+		<header>
+			<nav>
+				<ul class="master-nav">
+					<li class="menu item">Home</li>
+					<li class="menu item">About</li>
+					<li class="menu item">Contact</li>
+				</ul>
+			</nav>
+		</header>
+		<div class="content">
+			<article>
+				<h1>Article Title</h1>
+				<p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec non enim in turpis pulvinar facilisis.</p>
+			</article>
+			<aside>
+				side bar
+			</aside>
+		</div>
+		
+	</div>
+	<footer>
+		footer content
+	</footer>
+</div>
 </body>
 </html>
